Change database to local DB

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
                         </li>
                         <form action="/delete" method="post" class="delete-form">
                             <button class="delete-button" type="submit" name="taskId"
-                                value="<%= task._id %>">Delete</button>
+                                value="<%= task._id %>">Done</button>
                         </form>
                     </div>
                     <% }); %>
@@ -39,7 +39,7 @@
                         </li>
                         <form action="/delete2" method="post" class="delete-form">
                             <button class="delete-button" type="submit" name="taskId"
-                                value="<%= task._id %>">Delete</button>
+                                value="<%= task._id %>">Done</button>
                         </form>
                     </div>
                     <% }); %>
